new shortcut ink
Renamed some files and deleted Flyff.Ink since this shortcut has the wrong path. Added mkInk.bat to make the shortcut.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="title-bar">
         <img src="assets/favicon.ico" alt="App Icon" class="title-bar-icon">
-        <div>Flyff</div>
+        <div class="title">Flyff</div>
         <div class="title-bar-controls">
             <button onclick="minimizeWindow()" class="title-bar-button">
                 <i class="bi bi-dash-lg"></i>
